stacks/kubernetes-dashboard/kubernetes-dashboard.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubernetes.localhost`)
      services:
        - kind: Service
          name: kubernetes-dashboard-web
          namespace: kubernetes-dashboard
          port: 8000
