stacks/kubernetes-dashboard/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-route
  namespace: kubernetes-dashboard
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: gateway
  hostnames:
    - kubernetes.localhost
  rules:
    - backendRefs:
        - kind: Service
          name: kubernetes-dashboard-web
          port: 8000
